--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="tarefa.html">Minhas Tarefas</a>
+                <a class="nav-link active" aria-current="page" href="#">Minhas Tarefas</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="index.html">Criar Tarefa</a>
