--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Css do Projeto -->
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="icons/icon-192x192.png" type="image/png">
     <title>AnotaTarefas</title>
 </head>
 <body>
@@ -30,7 +32,7 @@
         </div>
       </nav>
       
-      <section class="container">
+      <section class="my_container">
       <h1 id="addTtitulo">Adicionar as Tarefas</h1>
       <form id="formTarefa">
         <div class="mb-3">
@@ -51,18 +53,24 @@
         </div>
         <button type="submit" class="btn btn-primary">Adicionar Tarefa</button>
       </form>
-
       <ul id="listaTarefa"></ul>
     </section>
+
     <footer class="text-bg-secondary text-center row row-cols-3">
       <div class="col">Contato</div>
       <div class="col">&copy; 2024 AnotaTarefas</div>
       <div class="col">Email: anotatarefas@gmail.com</div>
     </footer>
-
 </body>
 <!-- Js do Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <!-- Js do Projeto -->
 <script src="./js/index.js"></script>
+<script>
+  if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/service-worker.js')
+      .then(() => console.log('Service Worker registrado com sucesso.'))
+      .catch((error) => console.log('Falha ao registrar o Service Worker:', error));
+  }
+</script>
 </html>
