--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -59,7 +59,8 @@
     <footer class="text-bg-secondary text-center row row-cols-3">
       <div class="col">Contato</div>
       <div class="col">&copy; 2024 AnotaTarefas</div>
-      <div class="col">Email: anotatarefas@gmail.com</div>
+      <div class="col"><a href="mailto:email@provedor.com.br?subject=Assunto do email&cc=copia@provedor.com.br&bcc=copiaoculta@provedor.com.br&body=Conteúdo do email que será preenchido automaticamente">Enviar email</a>
+      </div>
     </footer>
 </body>
 <!-- Js do Bootstrap -->
